--- a/index.html
+++ b/index.html
@@ -28,15 +28,29 @@
 		</header>
 
 		<main id="card-container">
+			<!-- <card data-image="https://vignette.wikia.nocookie.net/strangerthings8338/images/b/b0/ST2-Final_poster.jpg/revision/latest?cb=20171022194958">
+				<div class="h1" slot="header">Trees</div>
+				<p slot="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+			</card>
 			<card data-image="https://vignette.wikia.nocookie.net/strangerthings8338/images/b/b0/ST2-Final_poster.jpg/revision/latest?cb=20171022194958">
 				<div class="h1" slot="header">Trees</div>
 				<p slot="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 			</card>
+			<card data-image="https://vignette.wikia.nocookie.net/strangerthings8338/images/b/b0/ST2-Final_poster.jpg/revision/latest?cb=20171022194958">
+				<div class="h1" slot="header">Trees</div>
+				<p slot="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+			</card>
+			<card data-image="https://vignette.wikia.nocookie.net/strangerthings8338/images/b/b0/ST2-Final_poster.jpg/revision/latest?cb=20171022194958">
+				<div class="h1" slot="header">Trees</div>
+				<p slot="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+			</card> -->
 		</main>
 
 
-		<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.0.1/vue.min.js"></script>
+		<script src="core.js"></script>
+		<script src="data.js"></script>
 		<script src="main.js"></script>
 	</body>
 </html>
