--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.0.1/vue.min.js"></script>
+		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.0.1/vue.min.js"></script> -->
+		<script src="tiltfx.js"></script>
 		<script src="core.js"></script>
 		<script src="data.js"></script>
 		<script src="main.js"></script>
