--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			</div>
 
 			<div class="item item-a">
-				<a href="#" class="link-header">Open card pack</a>
+				<a href="#" id="open-card-pack" class="link-header">Open card pack</a>
 			</div>
 			
 		</header>
