--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 			<div class="item">
 				<a href="http://joelthorner.github.io/stranger-cards/">
-					<img src="./images/logo_300.png" alt="bar" srcset="./images/logo_600.png 2x">
+					<img id="logo" src="./images/logo_300.png" alt="bar" srcset="./images/logo_600.png 2x">
 				</a>
 			</div>
 
@@ -45,6 +45,8 @@
 				<p slot="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 			</card> -->
 		</main>
+
+		<div id="animation-cards-open"></div>
 
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
