--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 	<body>
 		<header>
 			<div class="item item-a">
-				<a href="https://github.com/joelthorner/stranger-cards/" class="link-header">Github</a>
+				<a href="https://github.com/joelthorner/stranger-cards/" target="_blank" class="link-header">
+					<span class="text desktop">Github</span>
+					<svg class="mobile mobile-icon git-ico" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 438.549 438.549">
+						<path d="M409.132 114.573c-19.608-33.596-46.205-60.194-79.798-79.8-33.598-19.607-70.277-29.408-110.063-29.408-39.781 0-76.472 9.804-110.063 29.408-33.596 19.605-60.192 46.204-79.8 79.8C9.803 148.168 0 184.854 0 224.63c0 47.78 13.94 90.745 41.827 128.906 27.884 38.164 63.906 64.572 108.063 79.227 5.14.954 8.945.283 11.419-1.996 2.475-2.282 3.711-5.14 3.711-8.562 0-.571-.049-5.708-.144-15.417a2549.81 2549.81 0 0 1-.144-25.406l-6.567 1.136c-4.187.767-9.469 1.092-15.846 1-6.374-.089-12.991-.757-19.842-1.999-6.854-1.231-13.229-4.086-19.13-8.559-5.898-4.473-10.085-10.328-12.56-17.556l-2.855-6.57c-1.903-4.374-4.899-9.233-8.992-14.559-4.093-5.331-8.232-8.945-12.419-10.848l-1.999-1.431c-1.332-.951-2.568-2.098-3.711-3.429-1.142-1.331-1.997-2.663-2.568-3.997-.572-1.335-.098-2.43 1.427-3.289 1.525-.859 4.281-1.276 8.28-1.276l5.708.853c3.807.763 8.516 3.042 14.133 6.851 5.614 3.806 10.229 8.754 13.846 14.842 4.38 7.806 9.657 13.754 15.846 17.847 6.184 4.093 12.419 6.136 18.699 6.136 6.28 0 11.704-.476 16.274-1.423 4.565-.952 8.848-2.383 12.847-4.285 1.713-12.758 6.377-22.559 13.988-29.41-10.848-1.14-20.601-2.857-29.264-5.14-8.658-2.286-17.605-5.996-26.835-11.14-9.235-5.137-16.896-11.516-22.985-19.126-6.09-7.614-11.088-17.61-14.987-29.979-3.901-12.374-5.852-26.648-5.852-42.826 0-23.035 7.52-42.637 22.557-58.817-7.044-17.318-6.379-36.732 1.997-58.24 5.52-1.715 13.706-.428 24.554 3.853 10.85 4.283 18.794 7.952 23.84 10.994 5.046 3.041 9.089 5.618 12.135 7.708 17.705-4.947 35.976-7.421 54.818-7.421s37.117 2.474 54.823 7.421l10.849-6.849c7.419-4.57 16.18-8.758 26.262-12.565 10.088-3.805 17.802-4.853 23.134-3.138 8.562 21.509 9.325 40.922 2.279 58.24 15.036 16.18 22.559 35.787 22.559 58.817 0 16.178-1.958 30.497-5.853 42.966-3.9 12.471-8.941 22.457-15.125 29.979-6.191 7.521-13.901 13.85-23.131 18.986-9.232 5.14-18.182 8.85-26.84 11.136-8.662 2.286-18.415 4.004-29.263 5.146 9.894 8.562 14.842 22.077 14.842 40.539v60.237c0 3.422 1.19 6.279 3.572 8.562 2.379 2.279 6.136 2.95 11.276 1.995 44.163-14.653 80.185-41.062 108.068-79.226 27.88-38.161 41.825-81.126 41.825-128.906-.01-39.771-9.818-76.454-29.414-110.049z" fill="#FFF"/>
+					</svg>
+				</a>
 			</div>
 
 			<div class="item">
@@ -22,31 +27,42 @@
 			</div>
 
 			<div class="item item-a">
-				<a href="#" id="open-card-pack" class="link-header">Open card pack</a>
+				<a href="#" id="open-card-pack" class="link-header">
+					<span class="desktop text">Open card pack</span>
+					<svg class="mobile mobile-icon" xmlns="http://www.w3.org/2000/svg" width="595.28" height="479.07" viewBox="-4 0 595.28 479.07">
+						<path d="M113.094 396.883V81.18c0-3.429.59-6.805 1.056-10.111L23.647 100.53c-20.993 6.818-32.503 29.578-25.683 50.567l97.599 300.25c5.494 16.912 21.35 27.724 38.275 27.724 4.083 0 8.245-.632 12.326-1.955l25.677-8.451c-33.241-6.638-58.747-36.679-58.747-71.782z"/>
+						<path fill="none" d="M242.184 0v.501h.023"/>
+						<path d="M178.795 349.783L276.35 49.594c.984-3.034 2.163-6.706 3.503-8.712h-93.854c-22.072 0-40.8 18.224-40.8 40.296v315.703c0 22.072 18.728 41.305 40.8 41.305h32.043c-33.301-16.051-50.759-52.973-39.247-88.403z"/>
+						<path d="M563.557 100.53L357.451 33.563a39.708 39.708 0 0 0-12.314-1.957c-16.928 0-32.76 10.81-38.254 27.718l-97.554 300.251c-6.82 20.995 4.772 43.75 25.767 50.569l206.102 66.97a39.955 39.955 0 0 0 12.316 1.955c16.928 0 32.76-10.814 38.254-27.726l97.556-300.25c6.82-20.987-4.774-43.745-25.767-50.563z"/>
+						<path fill="#000" d="M468.795 263.033l-55.75-18.184 18.184-55.75c.828-2.538-.823-9.17-7.721-11.42-6.896-2.249-12.143 2.134-12.972 4.671l-18.184 55.75-55.748-18.183c-2.539-.828-9.171.824-11.42 7.72-2.25 6.896 2.132 12.141 4.671 12.969l55.749 18.187-18.184 55.748c-.828 2.539.821 9.172 7.722 11.422 6.896 2.248 12.14-2.135 12.968-4.672l18.186-55.75 55.749 18.185c2.54.829 9.173-.822 11.421-7.722 2.251-6.899-2.135-12.143-4.671-12.971z"/>
+					</svg>
+				</a>
 			</div>
 			
 		</header>
 
-		<main id="card-container">
-			<!-- <card data-image="https://vignette.wikia.nocookie.net/strangerthings8338/images/b/b0/ST2-Final_poster.jpg/revision/latest?cb=20171022194958">
-				<div class="h1" slot="header">Trees</div>
-				<p slot="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-			</card>
-			<card data-image="https://vignette.wikia.nocookie.net/strangerthings8338/images/b/b0/ST2-Final_poster.jpg/revision/latest?cb=20171022194958">
-				<div class="h1" slot="header">Trees</div>
-				<p slot="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-			</card>
-			<card data-image="https://vignette.wikia.nocookie.net/strangerthings8338/images/b/b0/ST2-Final_poster.jpg/revision/latest?cb=20171022194958">
-				<div class="h1" slot="header">Trees</div>
-				<p slot="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-			</card>
-			<card data-image="https://vignette.wikia.nocookie.net/strangerthings8338/images/b/b0/ST2-Final_poster.jpg/revision/latest?cb=20171022194958">
-				<div class="h1" slot="header">Trees</div>
-				<p slot="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-			</card> -->
-		</main>
+		<main id="card-container"></main>
 
 		<div id="animation-cards-open"></div>
+
+		<div class="md-modal" id="disclaimer-spoiler">
+			<div class="md-content">
+				<h3>Modal Dialog</h3>
+				<div>
+					<p>This is a modal window. You can do the following things with it:</p>
+					<ul>
+						<li><strong>Read:</strong> modal windows will probably tell you something important so don't forget to read what they say.</li>
+						<li><strong>Look:</strong> a modal window enjoys a certain kind of attention; just look at it and appreciate its presence.</li>
+						<li><strong>Close:</strong> click on the button below to close the modal.</li>
+					</ul>
+					<button class="md-close">Close me!</button>
+				</div>
+			</div>
+		</div>
+
+		<div class="md-overlay"></div>
+
+		<svg width="0" height="0" style="position:absolute"><filter id="blur3px"><feGaussianBlur in="SourceGraphic" stdDeviation="3"></feGaussianBlur></filter></svg>
 
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
