--- a/index.html
+++ b/index.html
@@ -47,26 +47,21 @@
 
 		<div class="md-modal" id="disclaimer-spoiler">
 			<div class="md-content">
-				<h3>Modal Dialog</h3>
+				<h3>Spoiler alert!</h3>
 				<div>
-					<p>This is a modal window. You can do the following things with it:</p>
-					<ul>
-						<li><strong>Read:</strong> modal windows will probably tell you something important so don't forget to read what they say.</li>
-						<li><strong>Look:</strong> a modal window enjoys a certain kind of attention; just look at it and appreciate its presence.</li>
-						<li><strong>Close:</strong> click on the button below to close the modal.</li>
-					</ul>
-					<button class="md-close">Close me!</button>
+					<p>This page may contain spoilers from Stranger Things</p>
+					<button class="md-close btn" type="button">Close me!</button>
 				</div>
 			</div>
 		</div>
 
 		<div class="md-overlay"></div>
 
-		<svg width="0" height="0" style="position:absolute"><filter id="blur3px"><feGaussianBlur in="SourceGraphic" stdDeviation="3"></feGaussianBlur></filter></svg>
-
+		<video preload="auto" autoplay="" poster="./images/bg.jpg" loop="" muted="">
+			<source src="bg.mp4" type="video/mp4">
+		</video>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.0.1/vue.min.js"></script> -->
 		<script src="tiltfx.js"></script>
 		<script src="core.js"></script>
 		<script src="data.js"></script>
