--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+		<meta name="theme-color" content="#081321">
+
+		<link rel="icon" sizes="192x192" href="./images/icons/icon192x192.png">
+		<link rel="apple-touch-icon" href="./images/icons/icon192x192.png">
+		<meta name="msapplication-square310x310logo" content="./images/icons/icon310x310.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="./images/icons/icon76x76.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="./images/icons/icon120x120.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="./images/icons/icon152x152.png">
+		<meta name="msapplication-square70x70logo" content="./images/icons/icon70x70.png">
+		<meta name="msapplication-square150x150logo" content="./images/icons/icon150x150.png">
+
 		<link rel="stylesheet" href="bootstrap-reboot.min.css">
 		<link rel="stylesheet" href="main.css">
 	</head>
