--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>Stranger Cards - joelthorner</title>
-
 		<meta charset="utf-8">
+
+		<title>Stranger Cards - Joelthorner</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<meta name="theme-color" content="#081321">
@@ -16,7 +16,8 @@
 		<link rel="apple-touch-icon" sizes="152x152" href="./images/icons/icon152x152.png">
 		<meta name="msapplication-square70x70logo" content="./images/icons/icon70x70.png">
 		<meta name="msapplication-square150x150logo" content="./images/icons/icon150x150.png">
-
+		
+		<link rel="manifest" href="manifest.json">
 		<link rel="stylesheet" href="bootstrap-reboot.min.css">
 		<link rel="stylesheet" href="main.css">
 	</head>
