--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 	<div class="bg-color"></div>
 	
-	<video class="video-bg" preload="auto" autoplay="" poster="./img/bg.jpg" loop="" muted="">
+	<video class="video-bg" preload="auto" autoplay="" poster="img/bg/bg.jpg" loop="" muted="">
 		<source src="media/bg.mp4" type="video/mp4"/>
 	</video> 
 
